fixed layout spacing for mid section

--- a/css/index.css
+++ b/css/index.css
@@ -223,25 +223,51 @@ p {
 .about-container {
   padding: 50px;
   display: flex;
-  background-color: silver;
-  height: 80vh;
+  flex-direction: column;
+  background-color: black;
+  height: 100vh;
   justify-content: center;
 }
 .about-content,
 .about-content2 {
-  border: 2px solid black;
-  background-color: #112E32;
   margin: 10px;
   color: white;
-  width: 50%;
+}
+.about-content {
+  display: flex;
+  justify-content: center;
+}
+.about-content h2 {
+  text-align: center;
+  padding: 20px;
+}
+.about-content p {
+  padding-left: 20px;
+}
+.about-content h2,
+.about-content p,
+.content2 {
+  line-height: 2;
+}
+.content,
+.content2 {
+  width: 40%;
+  margin: 50px;
+  border: 1px solid white;
+}
+.content2 {
+  padding-left: 50px;
 }
 /* Portfolio */
 .portfolio-container {
+  padding: 50px;
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  justify-content: center;
 }
-.work {
+.work,
+.education {
+  padding-left: 50px;
   padding-bottom: 25px;
 }
 /* Contact */
